--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   padding: 0;
 }
 html {
-  
+  overflow-x: hidden;
 }
 img {
   max-width: 100%;
@@ -34,6 +34,7 @@ body {
   background-color: var(--cinza);
   color: white;
   overflow-x: hidden;
+  position: relative
 }
 
 code {
